--- a/covid-19-tracking/public/index.html
+++ b/covid-19-tracking/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/000000/external-covid-19-corona-virus-flatart-icons-flat-flatarticons.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Covid Global Tracking</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
